@@ -1,3 +1,7 @@
+2019-02-28 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix max decimals option for intervals displayed with significant digits (was used as both max and min)
+
 2019-02-22 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add "Number of decimals" and "Round halfway to even" (default away from zero) arguments to round() function
